# Fake-API-Server-MCP

./: .coveragerc  .pre-commit-config.yaml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: ci.yaml
