[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fake-api-server-mcp"
version = "0.0.0"
description = "🦾 A strong MCP server for Fake-API-Server."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "fake-api-server",
    "mcp",
    "mcp-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12,<4.0"
dependencies = []

[tool.poetry]
packages = [
    { include = "mcp", from = "fake_api_server_plugin", to = "fake_api_server" },
]

[project.urls]
Homepage = "https://github.com/Chisanan232/Fake-API-Server-MCP"
Documentation = "https://github.com/Chisanan232/Fake-API-Server-MCP"
Repository = "https://github.com/Chisanan232/Fake-API-Server-MCP"
Changelog = "https://github.com/Chisanan232/Fake-API-Server-MCP"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307233/90182605225"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"    # Generate a report as HTML about test
pytest-rerunfailures = "^14.0"    # Rerun feature in test for PyTest
coverage = "^6.2"    # Test coverage feature with service *CodeCov*
coveralls = "^3.3.1"    # Test coverage feature with service *Coverall*

[tool.poetry.group.pre-commit-ci]
optional = true

[tool.poetry.group.pre-commit-ci.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.1.0"
mypy = "^1.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.5.49"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = ">=0.24.1,<0.27.0"
mkdocstrings-python = "^1.9.0"
mike = "^2.1.3"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-committers-plugin-2 = {version = "^2.4.1", python = ">=3.8,<4"}
