[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake-api-server-mcp"
version = "0.0.0"
description = "🦾 A strong MCP server for Fake-API-Server."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "fake-api-server",
    "mcp",
    "mcp-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp[cli]>=1.9.4",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/Fake-API-Server-MCP"
#Documentation = "https://github.com/Chisanan232/Fake-API-Server-MCP"
Repository = "https://github.com/Chisanan232/Fake-API-Server-MCP"
#Changelog = "https://github.com/Chisanan232/Fake-API-Server-MCP"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307233/90182605225"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-html>=4.1.1,<5",
    "pytest-rerunfailures~=14.0",
    "coverage~=6.2",
    "coveralls>=3.3.1,<4",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<4",
    "pylint>=3.1.0,<4",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["fake_api_server_plugin/mcp"]

[tool.hatch.build.targets.wheel]
include = ["fake_api_server_plugin/mcp"]

[tool.hatch.build.targets.wheel.sources]
"fake_api_server" = "fake_api_server_plugin"
"fake_api_server/mcp" = "fake_api_server_plugin/mcp"
